fixing bug overflow hiden make a app lag

--- a/playground/component/Footer/footer.module.css
+++ b/playground/component/Footer/footer.module.css
@@ -8,7 +8,8 @@
 .rapper{
    padding: 60px;
    display: flex;
-   gap: 5em;
+   
+   gap: 2em;
 }
 .rapper>ul>li{
 list-style: none;
