--- a/playground/component/Section2/section2.module.css
+++ b/playground/component/Section2/section2.module.css
@@ -8,8 +8,8 @@
    flex-direction: column;
 }
 .section_2>h1{
-margin-top: 10vh;
-text-align: center;
+   margin-top: 2em;
+   text-align: center;
 }
 .card_section_2 {
    background-image:  linear-gradient(180deg, #00C0FD 0%, #0056FD 100%);
@@ -18,7 +18,7 @@ text-align: center;
    padding-bottom: 5vh;
 }
 .card_title,.card_list,.card_footer{
-   margin:7vh 7vw   ;
+   margin:3em 3em  ;
 }
 .card_footer{
    display: flex;
