--- a/playground/component/Section4/style.module.css
+++ b/playground/component/Section4/style.module.css
@@ -2,7 +2,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   gap: 5vh;
+   gap: 2em;
    color: #fff;
 }
 .container{
@@ -12,20 +12,34 @@
    background-image: linear-gradient(180deg, #00C0FD 0%, #0056FD 100%);
 }
 .rapper,.form{
-   margin-top: 10vh ;
-}
-.form{
+   margin: 5em auto 0 ;
    align-items: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 1em;
 }
+
 .form>input{
-   width: 50vw;
-   height: 3em;
-   margin-right: 28px;
+   width: 30em;
+   height: 2em;
    border: none;
    border-radius: 100px;
    background-color: #fff;
-   padding: 2.5em;
+   padding: 2em;
 }
 .form>input:focus{
    outline: none;
+}
+@media  screen and (max-width:760px){
+
+   .form{
+      flex-direction: column;
+   }
+   .form>input{
+      width: 20em;
+   }
+   .rapper>*{
+      margin: auto 2em  ;
+   }
 }
