--- a/playground/component/atomic/Button/button.module.css
+++ b/playground/component/atomic/Button/button.module.css
@@ -1,7 +1,7 @@
 
 .btn{
    border: none;
-   border-radius: 25px;
+   border-radius: 2em;
    background-color: #fff;
 }
 .primary{
